--- a/css/variables.less
+++ b/css/variables.less
@@ -171,7 +171,7 @@
 
 // Wells
 // -------------------------
-@wellBackground:                  #E9E8E0;
+@wellBackground:                  #fff;
 
 
 // Navbar
