--- a/css/theme.less
+++ b/css/theme.less
@@ -206,6 +206,26 @@ a{
         line-height:1.5em;
       }
     }
+    .badge_thumbnail{
+      position:absolute;
+    }
+    .badge_thumbnail_3,.badge_thumbnail_15,.badge_thumbnail_2{
+      top:-20px;
+      right:20px;
+    }
+    .badge_thumbnail_4{
+      bottom:20px;
+      right:20px;
+    }
+    .badge_thumbnail_7{
+      bottom:-20px;
+      left:20px;
+    }
+    .badge_thumbnail_14,.badge_thumbnail_6{
+      width:100%;
+      top:-20px;
+      text-align:center;
+    }
     .mots{
       float:left;
     }
@@ -222,6 +242,7 @@ a{
 }
 
 .footer{
+  margin-top:1em;
   background-color:@blueDark;
   padding-bottom:120px;
   border:none;
