--- a/css/theme.less
+++ b/css/theme.less
@@ -16,19 +16,69 @@ h3, .h3, .h3-like{
   margin-bottom:.2em;
 }
 
-a:focus, a:hover, a:active{
-  background:none;
-}
 header.cartouche h1{
   font-size:5em;
   margin-bottom:.2em;
 }
 a{
-  &:hover{
+  &:hover,&:active,&:focus{
     background:transparent;
   }
 }
 
+.chapo{
+  color:@green;
+  font-size:2.5em;
+  font-weight:200;
+  line-height:1em;
+  font-variant:smallcaps;
+  font-style:italic;
+  p{
+    margin-bottom:.8em;
+  }
+}
+
+table.spip{
+  tbody{
+    tr,tr:nth-child(odd){
+      td,th{
+        border:1px solid @green;
+        vertical-align:inherit;
+        padding:1em;
+        p:last-child{
+          margin-bottom:0;
+        }
+      }
+      td:first-child{
+        border:1px solid @green;
+        background:@green;
+        color:@white;
+        width:33%;
+        h3{
+          color:@blueDark;
+        }
+      }
+    }
+    tr:hover > th,tr:hover > td{
+      background:transparent;
+    }
+    tr:hover{
+      td:first-child{
+        background:@green;
+        color:@white;
+        h3{
+          color:@blueDark;
+        }
+      }
+    }
+  }
+  tbody > tr:nth-child(odd) > td, tbody > tr:nth-child(odd) > th{
+    background:transparent;
+    &:hover{
+      background:transparent;
+    }
+  }
+}
 .label{
   color:@green;
   background:none;
@@ -48,6 +98,40 @@ a{
     margin-top:40px;
     .spip_logos{
       margin:0;
+    }
+  }
+}
+.nav > li > a:hover, .nav > li > a:focus{
+  background:none;
+}
+.navbar-inverse{
+  .nav{
+    .active > a,
+    .active > a:hover,
+    .active > a:focus{
+      color:@green;
+      font-weight:normal;
+      background:none;
+    }
+  }
+} 
+#nav{
+  .navbar-inner{
+    position:relative;
+    .navbar-right{
+      position:absolute;
+      right:0;
+      top:0;
+      width:auto;
+      padding-right:0;
+      ul{
+        margin:0;
+        li{
+          a{
+            border:none;
+          }
+        }
+      }
     }
   }
 }
@@ -249,6 +333,9 @@ a{
   color:#fff;
   font-size:1.4em;
   line-height:1.6em;
+  strong{
+    color:@green;
+  }
   .social-links{
     color:#fff;
     font-size:.8em;
@@ -257,22 +344,28 @@ a{
     a{
       color:@white;
     }
-    .icon-twitter{
-      background-image:url(img/twitter_share_us.png);
-      background-position:0 0;
-      width:22px;
-      height:20px;
-      line-height:20px;
-    }
     .icon-facebook{
-      background-image:url(img/facebook.png);
-      background-position:0 0;
-      width:22px;
-      height:20px;
-      line-height:20px;
+      background-position:-8px 0;
+      width:14px;
     }
   }
 }
+
+.icon-twitter{
+  background-image:url(img/twitter_share_us.png);
+  background-position:0 0;
+  width:22px;
+  height:20px;
+  line-height:20px;
+}
+.icon-facebook{
+  background-image:url(img/facebook.png);
+  background-position:0 0;
+  width:22px;
+  height:20px;
+  line-height:20px;
+}
+    
 #timeline{
   width:100%;
   position:fixed;
