--- a/css/theme.less
+++ b/css/theme.less
@@ -786,18 +786,39 @@ table.spip h3 + p{
                   vertical-align:baseline;
                 }
                 a.remove_panier{
-                  color:@white;
+                  color:@green;
                   position:absolute;
-                  top:2px;
-                  right:4px;
+                  bottom:2px;
+                  left:2%;
                   display:none;
+                  width: 90%;
+                  padding: 2px;
+                  text-align: center;
+                  border: 2px solid @green;
                 }
               }
+            }
+            .timeline_drag:not(.empty){
               .headline_media:hover{
                 a.remove_panier{
                   display:block;
                 }
+                .h3-like{
+                  display:none;
+                }
               }
+            }
+            .timeline_drag.ui-state-highlight{
+              -webkit-animation: blink 1s linear infinite;
+              -moz-animation: blink 1s linear infinite;
+              animation: blink 1s linear infinite;
+              .headline_media{
+                  .h3-like{
+                    -webkit-animation: blinktext 0.8s linear infinite;
+                    -moz-animation: blinktext 0.8s linear infinite;
+                    animation: blinktext 0.8s linear infinite;
+                  }
+               }
             }
             .timeline_drag.empty{
                 .headline_media{
@@ -1339,6 +1360,24 @@ table.spip h3 + p{
        list-style-type:none;
      }
    }
+}
+
+@keyframes blink {  
+    0% { color: @green;background-image:none; }
+    100% { color: @white;background-image:url('img/border-dotted_timeline.png'); }
+}
+@-webkit-keyframes blink {
+    0% { color: @green;background-image:none; }
+    100% { color: @white;background-image:url('img/border-dotted_timeline.png'); }
+}
+
+@keyframes blinktext {
+    0% { color: transparent; }
+    80% { color: @white; }
+}
+@-webkit-keyframes blinktext {
+    0% { color: transparent; }
+    80% { color: @white; }
 }
 
 .page_order{
