--- a/css/theme.less
+++ b/css/theme.less
@@ -645,6 +645,10 @@ table.spip h3 + p{
             display:block;
           };
         }
+        #timeline_container_step1{
+          height:110px;
+          position:relative;
+        }
         .timeline_container{
           padding:0 1em;
           .time_line_intro{
@@ -753,14 +757,28 @@ table.spip h3 + p{
               }
             }
           }
+          .timeline_before{
+            position: absolute;
+            left: 5px;
+            top: 30px;
+            z-index: 1;
+            display:none;
+            cursor:pointer;
+          }
+          .timeline_after{
+            position: absolute;
+            right: 145px;
+            top: 30px;
+            z-index: 1;
+            display:none;
+            cursor:pointer;
+          }
           .timeline_list{
-            position:relative;
+            position:absolute;
+            overflow:hidden;
             margin:1em 0 .5em 0;
             padding-bottom:.5em;
-            overflow-x: scroll;
-            overflow-y: hidden;
             white-space:nowrap;
-            width:100%;
             .timeline_drag{
               background:transparent url('img/border-dotted_timeline.png') 0 0 no-repeat;
               width:137px;
