Un début de preview

--- a/css/theme.less
+++ b/css/theme.less
@@ -633,6 +633,25 @@ table.spip h3 + p{
       .timeline_line{
         background-color:@green;
         overflow:hidden;
+        .preview_video{
+          background:@blueDark;
+          margin:10px 0 0 0;
+          position:relative;
+          height:400px;
+          position:relative;
+          .close_preview_on{
+            position:absolute;
+            top:0;
+            right:10%;
+            display:block;
+            text-transform:uppercase;
+            color:@white;
+            padding:10px;
+            background:@green;
+            font-weight:bold;
+            font-size:1.2em;
+          }
+        }
         .timeline_next{
           position:absolute;
           top:0;
