--- a/css/theme.less
+++ b/css/theme.less
@@ -822,6 +822,23 @@ table.spip h3 + p{
                 img{
                   vertical-align:baseline;
                 }
+                .move_right_left{
+                  position:absolute;
+                  top:2px;
+                  left:2%;
+                  display:none;
+                  width: 90%;
+                  padding: 2px;
+                  border: 2px solid @green;
+                  a{
+                    color:@green;
+                    display:block;
+                    float:left;
+                  }
+                  a.moveright{
+                    float:right;
+                  }
+                }
                 a.remove_panier{
                   color:@green;
                   position:absolute;
@@ -837,7 +854,7 @@ table.spip h3 + p{
             }
             .timeline_drag:not(.empty){
               .headline_media:hover{
-                a.remove_panier{
+                a.remove_panier,.move_right_left{
                   display:block;
                 }
                 .h3-like{
