le ticket doit ressembler sur la page de commande

--- a/css/theme.less
+++ b/css/theme.less
@@ -1442,11 +1442,11 @@ table.spip h3 + p{
     80% { color: @white; }
 }
 
-.page_order{
+.page_order,.page_commande{
   .ticket_container{
     background:@green;
     overflow:hidden;
-    margin:1em -4em;
+    margin:1em -3em 1em -5em;
     padding:0 2em;
     .ticket{
       width:100%;
